# OpenGL-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SandboxLayer.cpp  SandboxLayer.h  main.cpp
Editor/: CMakeLists.txt
Editor/src/: editorpch.cpp  editorpch.h
Editor/src/Editor/: EditorApp.cpp  EditorCameraController.cpp  EditorCameraController.h  EditorLayer.cpp  EditorLayer.h  EditorWindow.h  InspectorWindow.cpp  InspectorWindow.h  SceneHeirarchy.cpp  SceneHeirarchy.h  Test.h  main.cpp
Editor/src/Editor/Windows/: AssetBrowserWindow.cpp  AssetBrowserWindow.h  EditorWindow.cpp  EditorWindow.h  InspectorWindow.cpp  InspectorWindow.h  SceneHeirarchy.cpp  SceneHierarchy.h
Engine/: CMakeLists.txt
Engine/src/GLE/: glepch.h
Engine/src/GLE/Core/: Application.cpp  Application.h  CameraController.h  Color.h  EntryPoint.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  Time.cpp  Window.h
Engine/src/GLE/Core/Platform/: GLFWInput.cpp  GLFWWindow.cpp
Engine/src/GLE/Core/Scene/: Scene.cpp  Scene.h
Engine/src/GLE/Core/Scene/ECS/: Entity.cpp  Entity.h
Engine/src/GLE/Core/Scene/ECS/Component/: CameraComponent.h  Components.h  IDComponent.h  LightComponent.h  MaterialComponent.h  PrimitiveRendererComponent.h  TransformComponent.h
Engine/src/GLE/Core/Scene/Systems/: LightSystem.cpp  LightSystem.h  RenderSystem.cpp  RenderSystem.h  System.h
Engine/src/GLE/Core/UI/: ImGuiLayer.cpp  ImGuiLayer.h
Engine/src/GLE/Core/Util/: Random.h  UUID.cpp
Engine/src/GLE/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/GLE/Renderer/: Buffer.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  Lights.h  Material.cpp  Material.h  PrimitiveType.h  RenderCommand.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.h
Engine/src/GLE/Renderer/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLFramebuffer.cpp  OpenGLRenderCommand.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp
assets/shaders/: FrameBufferTest.glsl  FramebufferOutput.glsl  Standard.glsl  Unlit.glsl
src/GLE/: glepch.cpp  glepch.h
src/GLE/Core/: Application.cpp  Application.h  CameraController.cpp  Input.h  Layer.cpp  Layer.h  Log.cpp  Log.h  Random.cpp  Time.h  Transform.h  UUID.cpp  UUID.h  Window.h
src/GLE/Core/Platform/: GLFWInput.cpp  GLFWWindow.cpp  WindowsWindow.cpp
src/GLE/Core/Scene/: Scene.cpp  Scene.h
src/GLE/Core/Scene/ECS/: Entity.h
src/GLE/Core/Scene/ECS/Component/: BaseComponent.h  Components.h  IDComponent.h  NameComponent.h  TransformComponent.h
src/GLE/Core/UI/: ImGuiLayer.cpp  ImGuiLayer.h
src/GLE/Events/: ApplicationEvent.h  KeyEvent.h  MouseEvent.h
src/GLE/Renderer/: Camera.cpp  Camera.h  PrimitiveType.h  RenderCommand.h  Renderer.cpp  Renderer.h  Shader.h
src/GLE/Renderer/Platform/OpenGL/: OpenGLShader.cpp
